fix: wrap header and content into zen-space
BREAKING CHANGE:
- `zen-panel`: Padding is changed! Both header and content have default padding set.
- `zen-panel`: Zen-text is no longer wrapping header. Common header should be
   `<zen-text slot="header">Item title</zen-text>`

--- a/src/components/zen-panel/zen-panel.scss
+++ b/src/components/zen-panel/zen-panel.scss
@@ -5,22 +5,20 @@
   font-size: 0.875rem;
 }
 
-.header-container {
+.header {
   cursor: pointer;
+
+  .icon {
+    margin-right: 0.5rem;
+  }
 }
 
 .chevron {
   color: $color-gray-700;
 }
 
-.header {
-  margin-left: 4px;
-}
-
-.content {
+.content-wrapper {
   display: none;
-
-  margin-top: 1rem;
 }
 
 .visible {
